Okay, now it's possible to tell whether you've uploaded something successfully or not

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -177,7 +177,7 @@
 					ng-value="recording"
 					ng-change="updateSelectedRecording(recording)">
 				>
-					{{ recording.date }}
+					{{ recording.date + (recording.uploaded ? "Uploaded" : "Not" ) }}
 				</ion-radio>
 			</ion-scroll>
 			<div class="profiles-flex">
