Fixes #140 -- Practices index from 1 now

--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -21,7 +21,7 @@
 	<p
 		ng-hide="!isPracticing"
 		class="words-progress-indicator">
-		--- {{currentWordIdx}} of {{count}}
+		--- {{currentWordIdx + 1}} of {{count}}
 	</p>
 	</div>
 
