--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -175,9 +175,12 @@
 					ng-model="data.selectedProfileRecording"
 					ng-repeat="recording in data.currentProfileRecordings"
 					ng-value="recording"
-					ng-change="updateSelectedRecording(recording)">
+					ng-change="updateSelectedRecording(recording)"
+					ng-class="{uploaded:recording.uploaded, not_uploaded:!recording.uploaded}"
 				>
-					{{ recording.date + (recording.uploaded ? "Uploaded" : "Not" ) }}
+					<div>{{ recording.date }} </div>
+					<div ng-if=recording.uploaded class="upload_badge uploaded">Uploaded</div>
+					<div ng-if=!recording.uploaded class="upload_badge not_uploaded">Not Uploaded</div>
 				</ion-radio>
 			</ion-scroll>
 			<div class="profiles-flex">
