Fixes #148 --- I'm shrinking the LPC when we start practice/probing to make room for the rating buttons, which should get rid of the issue where missing the button resets the F3 target. This actually causes another issue though, which I can only fix by decreasing the pixel ratio of the renderer down to 1. If the overly-pixelated LPC becomes a huge issue I can try to fix it, but for now I'm not going to waste any more time and upload it as is

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -4,7 +4,7 @@
 	<!-- this holds the lpc renderer -->
 	<div
 		id="lpc-canvas-parentSize"
-		ng-class="{'slider-and-canvas': !tutorial}"
+		ng-class="{'slider-and-canvas': !tutorial, buttons_visible: rate}"
 		ng-class="{'full-width': !rate && !reset && !tutorial}"
 		>
 		<!-- Renderer will be inserted here -->
