--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -12,14 +12,16 @@
 
 		<div class="probe-description-row" ng-hide="practicing">
 			<div class="probe-description">
+				<h3>Syllable Quiz</h3>
 				<p>
-					Syllable quiz: Imitate the clinician's model of syllables
+					Imitate the clinician's model of syllables
 					 containing /r/ (ten syllables, three times each).
 				</p>
 			</div>
 			<div class="probe-description">
+				<h3>Word Quiz</h3>
 				<p>
-					Word quiz: Read words containing /r/. The long quiz
+					Read words containing /r/. The long quiz
 					 contains 50 words and the short quiz contains 25 words.
 				</p>
 			</div>
