--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -12,14 +12,16 @@
 
 	<div class="quest-description-row" ng-hide="practicing || configuring">
 		<div class="quest-description">
+			<h3>Syllable Quest</h3>
 			<p>
-				Syllable quest: Imitate the clinician's model of syllables
+				Imitate the clinician's model of syllables
 				 containing /r/ (ten syllables, three times each).
 			</p>
 		</div>
 		<div class="quest-description">
+			<h3>Word Quest</h3>
 			<p>
-				Word quest: Read words containing /r/. Different sets of
+				Read words containing /r/. Different sets of
 				words have the /r/ sound in different positions
 			</p>
 		</div>
