--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -109,7 +109,9 @@
 		order="order"
 		count="data.count"
 		type="type"
+		begin-on-load="true"
 		pause-every="10"
+		suppress-start-button="true"
 		end-practice-callback="endQuestCallback()">
 	</practice-directive>
 
