--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -15,7 +15,7 @@
 				<h3>Syllable Quiz</h3>
 				<p>
 					Imitate the clinician's model of syllables
-					 containing /r/ (ten syllables, three times each).
+					 containing /r/. Contains 30 syllables.
 				</p>
 			</div>
 			<div class="probe-description">
