--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,4 +1,5 @@
-<ion-view view-title="Word Quest" class="state-contentBox">
+<ion-view view-title="Quest" class="state-contentBox">
+	<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 	<div class="quest-contentBox">
 
 	<div class="quest-header" ng-hide="practicing || configuring">
