--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Test Probes" class="state-contentBox">
+	<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 	<div class="auto-contentBox">
 
 		<div class="probe-header" ng-hide="practicing">
