--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Test Probes" class="state-contentBox">
+<ion-view class="state-contentBox">
 	<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 	<div class="auto-contentBox">
 
@@ -36,7 +36,7 @@
 					ng-click="beginSyllableProbe()"
 					ng-hide="practicing"
 				>
-					Syllable Probe
+					Syllable Quiz
 				</button>
 			</div>
 
@@ -47,7 +47,7 @@
 					ng-click="beginWordProbe(50)"
 					ng-hide="practicing"
 				>
-					Long Word Probe
+					Long Word Quiz
 				</button>
 
 				<!-- 25 items, random -->
@@ -56,7 +56,7 @@
 					ng-click="beginWordProbe(25)"
 					ng-hide="practicing"
 				>
-					Short Word Probe
+					Short Word Quiz
 				</button>
 			</div>
 		</div>
@@ -65,7 +65,7 @@
 			begin-on-load="true"
 			ng-if="practicing"
 			probe="true"
-			csv="csv"
+			csvs="csvs"
 			order="order"
 			count="count"
 			type="type"
