--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -93,7 +93,7 @@
 		<div class="word-quest-trial-goal">
 			<h2>Select Session Trial Goal</h2>
 			<p>{{data.count}} Trials</p>
-			<input type="range" min="15" max="100" ng-model="data.count" ng-change="updateCount()" />
+			<input type="range" min="15" max="100" step="5" ng-model="data.count" ng-change="updateCount()" />
 		</div>
 
 		<div class="quest-button-class">
