--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -70,7 +70,7 @@
 			ng-click="hideLPC()"
 			class="reset-button big-button"
 			ng-if="!probe && hideBtn"
-			ng-hide="lpcHidden || rate">
+			ng-hide="true || lpcHidden || rate">
 			Hide Wave
 		</button>
 	</div>
