--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -34,7 +34,7 @@
 		sand="true"
 		tutorial="false"
 		type="type"
-		waveHidden="isFeedbacking"
+		wave-hidden="forceWaveHidden || isFeedbacking"
 		hide-btn="true"
 	/>
 
