--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -67,7 +67,7 @@
 					class="big-button"
 					ng-selected="data.selectedCategories.includes(1)"
 					ng-click="toggleRCategory(1)">
-					{{data.type === "Word" ? "/r/ead" : "ret" }}
+					{{data.type === "Word" ? "/r/ead" : "ree" }}
 				</button>
 				<button
 					class="big-button"
@@ -79,7 +79,7 @@
 					class="big-button"
 					ng-selected="data.selectedCategories.includes(3)"
 					ng-click="toggleRCategory(3)">
-					{{data.type === "Word" ? "doo/r/" : "air" }}
+					{{data.type === "Word" ? "doo/r/" : "ear" }}
 				</button>
 				<button
 					class="big-button"
