--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -23,7 +23,7 @@
 			<h3>Word Quest</h3>
 			<p>
 				Read words containing /r/. Different sets of
-				words have the /r/ sound in different positions
+				words have the /r/ sound in different positions.
 			</p>
 		</div>
 	</div>
