Correct syllable quest description (fixes #178)

--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -15,8 +15,7 @@
 		<div class="quest-description">
 			<h3>Syllable Quest</h3>
 			<p>
-				Imitate the clinician's model of syllables
-				 containing /r/ (ten syllables, three times each).
+				Read syllables containing /r/. Different syllables have the /r/ sound in different positions.
 			</p>
 		</div>
 		<div class="quest-description">
