Fixing the word cutoff, as well as a couple of typos

--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -79,13 +79,13 @@
 					class="big-button"
 					ng-selected="data.selectedCategories.includes(3)"
 					ng-click="toggleRCategory(3)">
-					{{data.type === "Word" ? "doo/r/" : "air" }}
+					{{data.type === "Word" ? "dee/r/" : "air" }}
 				</button>
 				<button
 					class="big-button"
 					ng-selected="data.selectedCategories.includes(4)"
 					ng-click="toggleRCategory(4)">
-					{{data.type === "Word" ? "dee/r/" : "ar" }}
+					{{data.type === "Word" ? "doo/r/" : "ar" }}
 				</button>
 			</div>
 		</div>
