--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -15,8 +15,8 @@
 			<div class="probe-description">
 				<h3>Syllable Quiz</h3>
 				<p>
-					Imitate the clinician's model of syllables
-					 containing /r/. Contains 30 syllables.
+					Read syllables containing /r/. Different syllables have
+					 the /r/ sound in different positions.
 				</p>
 			</div>
 			<div class="probe-description">
