--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
     <link rel="stylesheet" href="css/ionic.app.css">
     <link rel="stylesheet" href="css/app_styles.css">
+    <link type="text/css" rel="stylesheet" href="lib/firebaseui/dist/firebaseui.css" />
   </head>
 
   <body ng-app="start">
@@ -25,8 +26,11 @@
     <script src="lib/ng-resize/index.js"></script>
     <script src="lib/localforage-cordovasqlitedriver/dist/localforage-cordovasqlitedriver.js"></script>
     <script src="lib/angular-localforage/dist/angular-localForage.js"></script>
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/firebaseui/dist/firebaseui.js"></script>
     <script src="lib/ionic/js/ionic.js"></script>
     <script src="lib/ionic/js/ionic-angular.js"></script>
+    <script src="lib/firebase/firebase-firestore.js"></script>
     <!-- endinject -->
 
     <!-- inject:js -->
@@ -39,20 +43,21 @@
     <script src="common-components/lpc-directive/three-drawing.js"></script>
     <script src="common-components/lpc-directive/lpc-renderer.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
-    <script src="states/root/words/words_module.js"></script>
-    <script src="states/root/words/words_controller.js"></script>
-    <script src="states/root/tutorial/tutorial_module.js"></script>
-    <script src="states/root/tutorial/tutorial_controller.js"></script>
+    <script src="common-components/firebase-service/firebase-service_module.js"></script>
     <script src="states/root/syllables/syllables_module.js"></script>
     <script src="states/root/syllables/syllables_controller.js"></script>
+    <script src="states/root/tutorial/tutorial_module.js"></script>
+    <script src="states/root/tutorial/tutorial_controller.js"></script>
     <script src="states/root/resources/resources_module.js"></script>
     <script src="states/root/resources/resources_controller.js"></script>
+    <script src="states/root/words/words_module.js"></script>
+    <script src="states/root/words/words_controller.js"></script>
     <script src="states/root/profiles/profiles_module.js"></script>
     <script src="states/root/profiles/profiles_controller.js"></script>
-    <script src="states/root/free-play/free-play_module.js"></script>
-    <script src="states/root/free-play/free-play_controller.js"></script>
     <script src="states/root/auto/auto_module.js"></script>
     <script src="states/root/auto/auto_controller.js"></script>
+    <script src="states/root/free-play/free-play_module.js"></script>
+    <script src="states/root/free-play/free-play_controller.js"></script>
     <script src="states/root/root_module.js"></script>
     <script src="states/root/root_controller.js"></script>
     <script src="app_module.js"></script>
