--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -5,7 +5,9 @@
   <ion-nav-bar></ion-nav-bar>
 
   <!-- Content -->
-  <ion-nav-view name="content-view" id="content-container"></ion-nav-view>
+  <ion-nav-view name="content-view" id="content-container">
+      <div id="firebaseui-auth-container"></div>
+  </ion-nav-view>
 
   <!-- Tabs -->
   <div id="nav-container">
