Adding useful recording counter stuff to the firebase firestore data

--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -39,6 +39,7 @@
     <script src="common-components/profile-service/profile-service_module.js"></script>
     <script src="common-components/practice-directive/practice-directive_module.js"></script>
     <script src="common-components/practice-directive/practice-directive_controller.js"></script>
+    <script src="common-components/notifying-service/notifying-service_module.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_module.js"></script>
     <script src="common-components/lpc-directive/three-drawing.js"></script>
     <script src="common-components/lpc-directive/lpc-renderer.js"></script>
