--- a/staRt/www/index.html
+++ b/staRt/www/index.html
@@ -47,6 +47,7 @@
     <script src="common-components/lpc-directive/lpc-renderer.js"></script>
     <script src="common-components/lpc-directive/lpc-directive_controller.js"></script>
     <script src="common-components/firebase-service/firebase-service_module.js"></script>
+    <script src="common-components/auto-service/auto-service_module.js"></script>
     <script src="states/root/words/words_module.js"></script>
     <script src="states/root/words/words_controller.js"></script>
     <script src="states/root/tutorial/tutorial_module.js"></script>
