Lots of work adding these 'guided-autos' or whatever you want to call them, so that if you're a formal tester the app can help guide you through the various steps associated with that

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -10,12 +10,12 @@
 		<!-- Renderer will be inserted here -->
 		<canvas
 			id="lpc-canvas"
-			ng-hide="lpcHidden || probe || waveHidden" >
+			ng-hide="lpcHidden || probe || waveHidden || $root.rootWaveHidden" >
 		</canvas>
 
 		<div
 			class="waveLabel"
-			ng-hide="!(lpcHidden || probe || waveHidden)" >
+			ng-hide="!(lpcHidden || probe || waveHidden || $root.rootWaveHidden)" >
 			Wave Hidden
 		</div>
 
@@ -62,7 +62,7 @@
 			ng-click="showLPC()"
 			class="reset-button big-button"
 			ng-if="!probe && hideBtn"
-			ng-hide="!lpcHidden || rate">
+			ng-hide="!lpcHidden || rate || $root.rootWaveForced">
 			Show Wave
 		</button>
 
